src/screens/Home/Tabs/Workspaces/workspacesStyles.css
.tooltip {
  position: absolute;
  background-color: #000;
  color: #fff;
  padding: 4px 8px;
  border-radius: 4px;
  font-size: 12px;
  opacity: 0.8;
}

& .directory {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  direction: rtl;
  gap: 5px;
  max-width: 300px;
  color: rgba(255, 255, 255, 0.3);
}

.delete {
  opacity: 0;
}

tr:hover {
  background-color: rgba(255, 255, 255, 0.3);
  z-index: 2;
  cursor: pointer;
  & .delete {
    opacity: 1;
    max-width: 15px;
    margin-right: 30px;
    & img {
      height: 15px;
      width: 15px;
      cursor: pointer;
    }
  }
  & .delete:hover {
    opacity: 0.5;
    transition: opacity 0.5s ease;
  }
}
.name {
  max-width: 600px;
  min-width: 450px;
}

.last-modified {
  max-width: 550px;
  min-width: 300px;
}

.contentTable {
  padding-left: 150px;
  padding-right: 80px;
  & tr {
    font-size: 16px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 0;

    & .directory,
    .timestamp,
    .favorite,
    .not-favorite {
      max-width: 400px;
      min-width: 300px;
      color: rgba(255, 255, 255, 0.6);
      display: flex;
      flex-grow: 1;
      flex-direction: column;
      align-items: center;
    }

    & .timestamp {
      padding-left: 30px;
      max-width: 500px;
      min-width: 200px;
    }

    & .favorite,
    .not-favorite {
      max-width: 100px;
      min-width: 50px;
      margin-left: 0;

      & img {
        height: 25px;
        width: 25px;
        cursor: pointer;
      }
    }
    & .bold {
      color: #fff;
      font-weight: bold;
    }
  }
}

.favorite img {
  padding: 0 10px;
  transition: opacity 0.5s ease;
  z-index: 1;
  opacity: 1;
}

.favorite img:hover {
  padding: 0 10px;
  transition: opacity 0.5s ease;
  z-index: 1;
  opacity: 0.5;
}

.not-favorite img {
  padding: 0 10px;
  z-index: 1;
  opacity: 0;
  transition: opacity 0.5s ease;
}

